--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-env": "^7.5.5",
     "babel-cli": "^6.26.0",
     "babelify": "^10.0.0",
+    "braces": "^3.0.2",
     "browserify": "^16.3.0",
     "gulp": "^4.0.2",
     "gulp-exit": "0.0.2",
