--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "msakuta",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.5.5",
+    "@babel/cli": "^7.8.4",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "babel-cli": "^6.26.0",
@@ -33,6 +33,7 @@
     "jquery": "^3.4.1",
     "konva": "^4.0.0",
     "marchingsquares": "^1.3.3",
-    "simplify-js": "^1.2.3"
+    "simplify-js": "^1.2.3",
+    "minimist": ">=1.2.2"
   }
 }
